# Kronos

./: .gitignore  Makefile  README.md  compose.yaml
backend_kronos/: .gitignore  Cargo.toml  Dockerfile  Makefile  README_database.md  backend_configuration.yaml
backend_kronos/configs/: backend_configuration.yaml
backend_kronos/migration/: Cargo.toml  README.md
backend_kronos/migration/src/: lib.rs  m20250220_000001_create_table.rs  m20250220_183047_create_table.rs  m20250314_000002_create_echelon_type.rs  m20250316_000002_create_unit.rs  m20250316_000003_create_plan.rs  m20250317_000004_create_order.rs  m20250317_000005_create_paragraph.rs  m20250319_000006_seed_plans_data.rs  m20250319_000006_seed_unit_data.rs  m20250319_000007_seed_plans_data.rs  m20250326_000008_order_template.rs
backend_kronos/migration/src/entities/: prelude.rs  test_table.rs
backend_kronos/scripts/: init_db.sh  make_migations.sh  seed_data.sh  set_database_url.sh
backend_kronos/src/: configuration.rs  database.rs  environment.rs  lib.rs  main.rs  startup.rs
backend_kronos/src/entities/: mod.rs
backend_kronos/src/handlers/: healthchecks.rs  mod.rs
backend_kronos/src/models/: mod.rs
backend_kronos/src/models/entities/: entities_readme.md  kronos_order.rs  mod.rs  order.rs  paragraph.rs  plan.rs  prelude.rs  test_table.rs  unit.rs
backend_kronos/src/models/entity_implementations/: mod.rs
backend_kronos/src/models/entity_summaries/: admin_summary.rs  kronos_order_summary.rs  mod.rs  paragraph_summary.rs  plan_summary.rs  task_summary.rs  unit_summary.rs
backend_kronos/src/reference/: army_echelons.rs  army_echelons_enum.rs  army_rank_enum.rs  mod.rs
backend_kronos/src/routes/: healthchecks.rs  mod.rs  order_edits.rs
backend_kronos/src/routes/api/: api_handler.rs  mod.rs
backend_kronos/src/routes/api/api_methods/: get_order.rs  get_orders.rs  get_plans.rs  mod.rs
backend_kronos/src/utilities/: calendar_math.rs  database_tools.rs  mod.rs
backend_kronos/tests/: database_tests.rs  health_check.rs  integration_tests.rs  service_tests.rs  test_health_check.rs  test_utilities.rs
configs/: backend_configuration.yaml  (+2 more)
(+211 files in other folders)
