[package]
name = "backend_kronos"
version = "0.1.0"
authors = ["Remington Ponce-Pore <rponcepore@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
# by default, we will also get the following features that zero2prod recommends: chronos, uuid.
# migrate is handled by sea-orm.
sea-orm = {version = "1.1.5", features = ["sqlx-postgres", "runtime-tokio-rustls",  "macros"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.12"
