[package]
name = "backend_kronos"
version = "0.1.0"
authors = ["Remington Ponce-Pore <rponcepore@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.9.0"
chrono = "0.4.40"
config = "0.15.8"
debug_print = "1.0.0"
futures = "0.3.31"
# by default, we will also get the following features that zero2prod recommends: chronos, uuid.
# migrate is handled by sea-orm.
sea-orm = {version = "1.1.5", features = ["sqlx-postgres", "runtime-tokio-rustls",  "macros"]}
sea-orm-migration = "1.1.7"
serde = "1.0.218" 
serde_json = "1.0.140"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = {version = "0.12", features = ["json"]}

